added vim clang format plugin; fixed vim plugin installation

--- a/templates/vimrc.j2
+++ b/templates/vimrc.j2
@@ -14,6 +14,7 @@ call vundle#begin()
 Plugin 'VundleVim/Vundle.vim'
 Plugin 'https://github.com/kien/ctrlp.vim.git'
 Plugin 'https://github.com/altercation/vim-colors-solarized.git'
+Plugin 'https://github.com/rhysd/vim-clang-format.git'
 
 
 
