--- a/templates/vimrc.j2
+++ b/templates/vimrc.j2
@@ -15,6 +15,9 @@ Plugin 'VundleVim/Vundle.vim'
 Plugin 'https://github.com/kien/ctrlp.vim.git'
 Plugin 'https://github.com/altercation/vim-colors-solarized.git'
 Plugin 'https://github.com/rhysd/vim-clang-format.git'
+Plugin 'https://github.com/scrooloose/nerdtree.git'
+Plugin 'https://github.com/mileszs/ack.vim.git'
+Plugin 'https://github.com/Valloric/YouCompleteMe.git'
 
 
 
