quicker alternative to Esc in input mode

--- a/templates/vimrc.j2
+++ b/templates/vimrc.j2
@@ -44,6 +44,9 @@ set number
 " highlight search results
 set hlsearch
 
+" faster alternative to escape
+inoremap jk <Esc>
+
 " disable cursor keys (to get used to hjkl)
 noremap <Up> <NOP>
 noremap <Down> <NOP>
