Install recent docker-compose; removed kubuntu desktop

--- a/templates/vimrc.j2
+++ b/templates/vimrc.j2
@@ -46,11 +46,11 @@ set hlsearch
 
 " faster alternative to escape
 " http://vim.wikia.com/wiki/Avoid_the_escape_key
-" use jj rather than (quicker) jk because jk occurs frequently in Dutch words
-nnoremap jj <Esc>
-vnoremap jj <Esc>gV
-onoremap jj <Esc>
-inoremap jj <Esc>`^
+" nnoremap <Tab> <Esc>
+" vnoremap <Tab> <Esc>gV
+" onoremap <Tab> <Esc>
+" inoremap <Tab> <Esc>`^
+" inoremap <Leader><Tab> <Tab>
 
 " disable cursor keys (to get used to hjkl)
 noremap <Up> <NOP>
