added resolvconf; added comment about Max' vim shortcuts

--- a/templates/vimrc.j2
+++ b/templates/vimrc.j2
@@ -148,3 +148,15 @@ set background=dark
 "set background=light
 colorscheme solarized
 
+" Config for Fractal unit tests
+" [11:33:33] Maximiliano Pin:   " \cc
+"
+"   map <Leader>cc :cwindow<cr>:cc<cr><c-w>bz<cr><cr>
+"
+"     " \cn
+"
+"       map <Leader>cn :cwindow<cr>:cn<cr><c-w>bz<cr><cr>
+"
+"         " \cp
+"
+"           map <Leader>cp :cwindow<cr>:cp<cr><c-w>bz<cr><cr>
