Added vim surround plugin

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -19,9 +19,10 @@ Plugin 'https://github.com/scrooloose/nerdtree.git'
 Plugin 'https://github.com/mileszs/ack.vim.git'
 Plugin 'https://github.com/Valloric/YouCompleteMe.git'
 Plugin 'tpope/vim-fugitive'
+Plugin 'tpope/vim-surround'
+
 "powerline: too many dependencies
 "Plugin 'Lokaltog/powerline', {'rtp': 'powerline/bindings/vim/'}
-
 
 
 
