added several vim plugins

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -12,7 +12,7 @@ call vundle#begin()
 
 " let Vundle manage Vundle, required
 Plugin 'VundleVim/Vundle.vim'
-Plugin 'https://github.com/kien/ctrlp.vim.git'
+Plugin 'https://github.com/ctrlpvim/ctrlp.vim.git'
 Plugin 'https://github.com/altercation/vim-colors-solarized.git'
 Plugin 'https://github.com/rhysd/vim-clang-format.git'
 Plugin 'https://github.com/scrooloose/nerdtree.git'
@@ -23,7 +23,9 @@ Plugin 'tpope/vim-surround'
 Plugin 'bling/vim-airline'
 Plugin 'vim-airline/vim-airline-themes'
 Plugin 'airblade/vim-gitgutter'
-
+Plugin 'vim-scripts/Conque-GDB'
+Plugin 'honza/vim-snippets'
+Plugin 'jlanzarotta/bufexplorer'
 
 call vundle#end()            " required
 filetype plugin indent on 
@@ -135,6 +137,9 @@ silent! colorscheme solarized
 
 " Airline config
 set laststatus=2
+let g:ConqueTerm_Color = 2         " 1: strip color after 200 lines, 2: always with color
+let g:ConqueTerm_CloseOnEnd = 1    " close conque when program ends running
+let g:ConqueTerm_StartMessages = 0 " display warning messages if conqueTerm is configured incorrectly  
 
 " Config for Fractal unit tests
 " [11:33:33] Maximiliano Pin:   " \cc
