--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -31,7 +31,12 @@ call vundle#end()            " required
 filetype plugin indent on 
 
 " <----- end of Vundle config
-"
+
+" used by ctrlp
+set wildignore+=*/tmp/*,*.so,*.swp,*.zip,*.o,*.pyc     " MacOSX/Linux
+
+" ctrlp: ignore files in .gitignore
+let g:ctrlp_user_command = ['.git', 'cd %s && git ls-files -co --exclude-standard']
 
 
 " show commands in status bar
