installed Vim plugin a.vim (switching between header and source files)

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -28,6 +28,7 @@ Plugin 'honza/vim-snippets'
 Plugin 'jlanzarotta/bufexplorer'
 Plugin 'klen/python-mode'
 Plugin 'tell-k/vim-autopep8'
+Plugin 'a.vim'
 
 call vundle#end()            " required
 filetype plugin indent on 
