added dos2unix; disabled slow Python vim mode

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -26,8 +26,10 @@ Plugin 'airblade/vim-gitgutter'
 Plugin 'vim-scripts/Conque-GDB'
 Plugin 'honza/vim-snippets'
 Plugin 'jlanzarotta/bufexplorer'
-Plugin 'klen/python-mode'
-Plugin 'tell-k/vim-autopep8'
+
+" disabled because of poor performance of rope
+" Plugin 'klen/python-mode'
+" Plugin 'tell-k/vim-autopep8'
 Plugin 'a.vim'
 
 call vundle#end()            " required
