--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -43,7 +43,7 @@ autocmd FileType python setlocal shiftwidth=4 tabstop=4
 autocmd Filetype c,cpp set comments^=:///
 
 " used by ctrlp
-set wildignore+=*/tmp/*,*.so,*.swp,*.zip,*.o,*.pyc     " MacOSX/Linux
+set wildignore+=*/tmp/*,*.so,*.swp,*.zip,*.o,*.pyc,*/.ccache,*/node_modules
 
 " ctrlp: ignore files in .gitignore
 let g:ctrlp_user_command = ['.git', 'cd %s && git ls-files -co --exclude-standard']
