--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -189,4 +189,7 @@ let g:pymode_rope_lookup_project = 0
 
 let g:pymode_folding = 0
 
+" Custom make command for Docker container 
+" see http://stackoverflow.com/a/18116241 
+map <leader>j :set makeprg=./mymake <CR>:make <CR>:copen<CR> 
 
