Increase clang-format column limit to 120

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -116,6 +116,7 @@ let g:clang_format#auto_format = 1
 let g:clang_format#code_style = 'google'
 
 let g:clang_format#style_options = {
+            \ "ColumnLimit" : 120,
             \ "IndentWidth" : 2,
             \ "DerivePointerAlignment": "true",
             \ "Standard" : "C++11"}
