disabled automatic clang formatting to avoid modifications of fractal

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -111,7 +111,7 @@ endif
 " set custom executable
 let g:clang_format#command = 'clang-format-3.8'
 " automatic formatting
-let g:clang_format#auto_format = 1
+" let g:clang_format#auto_format = 1
 
 let g:clang_format#code_style = 'google'
 
