--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -112,7 +112,7 @@ endif
 " set custom executable
 
 " Version 4 required for qtest development
-let g:clang_format#command = 'clang-format-4.0'
+let g:clang_format#command = 'clang-format'
 " automatic formatting
 let g:clang_format#auto_format = 0
 
