Make cscope plugin silent to avoid messages on save

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -202,6 +202,7 @@ map <leader>j :set makeprg=./mymake <CR>:make <CR>:copen<CR>
 " cscope
 nnoremap <leader>fa :call CscopeFindInteractive(expand('<cword>'))<CR>
 nnoremap <leader>l :call ToggleLocationList()<CR>
+let g:cscope_silent = 1
 
 " Some optional key mappings to search directly.
 " s: Find this C symbol
