Added vim package headerbuard

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -26,6 +26,7 @@ Plugin 'airblade/vim-gitgutter'
 Plugin 'vim-scripts/Conque-GDB'
 Plugin 'honza/vim-snippets'
 Plugin 'jlanzarotta/bufexplorer'
+Plugin 'drmikehenry/vim-headerguard'
 
 " disabled because of poor performance of rope
 " Plugin 'klen/python-mode'
