--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -28,6 +28,7 @@ Plugin 'honza/vim-snippets'
 Plugin 'jlanzarotta/bufexplorer'
 Plugin 'drmikehenry/vim-headerguard'
 Plugin 'scrooloose/syntastic'
+Plugin 'gioele/vim-autoswap'
 
 " disabled because of poor performance of rope
 " Plugin 'klen/python-mode'
