--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -246,3 +246,7 @@ noremap <C-w>f :SyntasticToggleMode<CR>
 " sideways
 nnoremap <c-h> :SidewaysLeft<cr>
 nnoremap <c-l> :SidewaysRight<cr>
+
+let g:ycm_python_interpreter_path = '/usr/sbin/python2'
+let g:ycm_server_python_interpreter = '/usr/sbin/python2'
+
