Use bright background in vim

--- a/roles/vim/templates/vimrc.j2
+++ b/roles/vim/templates/vimrc.j2
@@ -164,8 +164,8 @@ highlight SpecialKey guifg=#4a4a59
 
 " vim-colors-solarized
 syntax enable
-" set background=dark
-set background=light
+set background=dark
+" set background=light
 
 " Missing when vim is first invoked by Ansible to install
 " plugins, therefore silenced
